add new apis /download-stock-candles
